--- a/animals/src/App.css
+++ b/animals/src/App.css
@@ -7,6 +7,7 @@
 button { 
     background-color: lightgreen;
     border: 1px solid green;
+    border-radius: 3px;
     font-size: 20px;
     padding: 10x;
     width: 30%;
