--- a/animals/src/Animalshow.css
+++ b/animals/src/Animalshow.css
@@ -1,9 +1,10 @@
 .animal-show {
     position: relative;
     border: 1px solid lightgray;
+    border-radius: 5px;
     padding: 10px;
     margin: 10px;
-    box-shadow: 0px 3p 4px lightgray;
+    box-shadow: 0px 3px 4px lightgray;
 };
 
 .animal {
